plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}

	all {
		exclude group:'commons-logging', module: 'commons-logging'
		exclude group: 'ch.qos.logback'

	}
}

repositories {
	mavenCentral()
}

compileJava {
	options.compilerArgs += ['-parameters']
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'com.konghq:unirest-java:3.11.11'
	implementation 'net.andrewcpu:elevenlabs-api:2.7.8'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation platform('com.google.cloud:libraries-bom:25.4.0') // Google Cloud BOM 사용
	implementation 'com.google.cloud:google-cloud-storage'
	implementation 'com.google.api-client:google-api-client:1.32.1'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'com.google.cloud:google-cloud-speech:4.31.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'



}

tasks.named('test') {
	useJUnitPlatform()
}
